examples/test/testpolicy11437.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11437
  namespace: namespace347
spec:
  podSelector:
    matchLabels:
      key42: value39
      key48: value48
      key35: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value39
      podSelector:
        matchLabels:
          key32: value40
          key29: value6
          key1: value9
